# FewShotEEGClassifier

./: eeg_classifier.py  pyproject.toml  train_classifier.py
training/: Train.py
